update: add pagination in banner-management

--- a/src/app/main/pages/film-streaming/film-streaming.component.html
+++ b/src/app/main/pages/film-streaming/film-streaming.component.html
@@ -28,7 +28,7 @@
     </div>
     <div class="detail-film-container">
         <div class="name-detail">
-            <h1 style="color: white;" class="text-white text-4xl mt-4 font-bold" [innerText]="filmData.FilmName"></h1>
+            <h1 style="color: white;" class="text-white text-4xl mt-4 font-bold" [innerText]="filmData.filmName"></h1>
             <p class="text-2xl m-2" [innerText]="'Mùa 1'"></p>
             <p class="text-xl m-2">{{filmData.releaseDate}} - 1/1 Tập - {{filmData.language}}</p>
             <p class="summary" [innerText]="filmData.description"></p>
