modified:   src/app/main/models/film.ts 	modified:   src/app/main/pages/film-streaming/film-streaming.component.html 	modified:   src/app/main/pages/film-streaming/film-streaming.component.ts

--- a/src/app/main/pages/film-streaming/film-streaming.component.html
+++ b/src/app/main/pages/film-streaming/film-streaming.component.html
@@ -57,7 +57,7 @@
 
             <button class="interact-button text-lg mr-3"><i class="fa-solid fa-coins text-yellow-500"></i> Thuê Ngay
             </button>
-            <button class="interact-button text-lg"><i class="fa-solid fa-cart-plus" style="font-size:24px"></i>
+            <button class="interact-button text-lg" (click)="addToCart()"><i class="fa-solid fa-cart-plus" style="font-size:24px"></i>
                 Thêm Giỏ</button>
             <iframe style="margin-top: 20px; width:100%; height: auto; aspect-ratio: 16/9;"
                 src="https://www.youtube.com/embed/6fkSDkOgx0c?si=G_BbT5C4QvyjJMjI" title="YouTube video player"
