--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 @if (loading) {
-    <nz-spin nzSimple [nzSize]="'large'"></nz-spin>
+    <div class="flex justify-center items-center h-full w-full z-10 bg-white">
+        <nz-spin nzSimple [nzSize]="'large'"></nz-spin>
+    </div>
+    
 }
 
 <router-outlet></router-outlet>
