--- a/src/app/management/pages/category-movie/category-movie.component.html
+++ b/src/app/management/pages/category-movie/category-movie.component.html
@@ -13,10 +13,10 @@
             <div class="search-container flex items-center space-x-2 text-white text-base relative">
                 Search:
                 <div class="relative flex items-center">
-                    <input class="ml-5 input-search pr-8" nz-input placeholder="Search by name" [(ngModel)]="valueSearch"
-                        (ngModelChange)="onSearchChange()" name="search" type="text" />
-                    <svg *ngIf="!valueSearch" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="search-icon absolute right-2">
+                    <input class="ml-5 input-search pr-8" nz-input placeholder="Search by name"
+                        [(ngModel)]="valueSearch" (ngModelChange)="onSearchChange()" name="search" type="text" />
+                    <svg *ngIf="!valueSearch" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                        stroke-width="1.5" stroke="currentColor" class="search-icon absolute right-2">
                         <path stroke-linecap="round" stroke-linejoin="round"
                             d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
                     </svg>
@@ -34,65 +34,82 @@
         </div>
         <!-- <div class="card-container grid grid-cols-1 sm:grid-cols-2 gap-4 p-4 m-1 border-solid border-slate-300 border rounded-xl ring-offset ring-0">-->
         <div class="card-container p-4 m-1 border-solid border-slate-300 border rounded-xl ring-offset ring-0">
-            <nz-card *ngFor="let category of filteredCategories" class="category-card">
-                <div class="card-content">
-                    <div class="card-info">
-                        <div class="flex">
-                            <span class="text-2xl font-semibold mr-2 text-blue-700">{{ category.name }}</span>
-                            <div class="flex items-center">
-                                <ng-container *ngIf="category.isActive; else falseIcon">
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                        stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2 text-green-500">
-                                        <path stroke-linecap="round" stroke-linejoin="round"
-                                            d="M15.182 15.182a4.5 4.5 0 0 1-6.364 0M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0ZM9.75 9.75c0 .414-.168.75-.375.75S9 10.164 9 9.75 9.168 9 9.375 9s.375.336.375.75Zm-.375 0h.008v.015h-.008V9.75Zm5.625 0c0 .414-.168.75-.375.75s-.375-.336-.375-.75.168-.75.375-.75.375.336.375.75Zm-.375 0h.008v.015h-.008V9.75Z" />
-                                    </svg>
-                                </ng-container>
-                                <ng-template #falseIcon>
-                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                        stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2 text-red-500">
-                                        <path stroke-linecap="round" stroke-linejoin="round"
-                                            d="M15.182 16.318A4.486 4.486 0 0 0 12.016 15a4.486 4.486 0 0 0-3.198 1.318M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0ZM9.75 9.75c0 .414-.168.75-.375.75S9 10.164 9 9.75 9.168 9 9.375 9s.375.336.375.75Zm-.375 0h.008v.015h-.008V9.75Zm5.625 0c0 .414-.168.75-.375.75s-.375-.336-.375-.75.168-.75.375-.75.375.336.375.75Zm-.375 0h.008v.015h-.008V9.75Z" />
-                                    </svg>
-                                </ng-template>
-                            </div>
-                        </div>
-                        <div class="additional-info">
-                            <p><strong>Description:</strong> {{ category.description }}</p>
-                            <p><strong>Category:</strong> {{ category.category }}</p>
-                            <p><strong>Album:</strong> {{ category.album }}</p>
-                            <p class="mr-2"><strong>Status:</strong>
-                                <nz-switch nzSize="small" class="ml-2 bg-red" [(ngModel)]="category.isActive"
-                                    [ngModelOptions]="{ standalone: true }"></nz-switch>
-                            </p>
-                            <div
-                                class="flex mt-14 gap-4 border-solid border-slate-600 border p-3 rounded-xl ring-offset ring-0 w-24">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"
-                                    class="size-7 bg-slate-800 text-green-600 cursor-pointer"
-                                    (click)="showModalUpdate()">
-                                    <path
-                                        d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-8.4 8.4a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32l8.4-8.4Z" />
-                                    <path
-                                        d="M5.25 5.25a3 3 0 0 0-3 3v10.5a3 3 0 0 0 3 3h10.5a3 3 0 0 0 3-3V13.5a.75.75 0 0 0-1.5 0v5.25a1.5 1.5 0 0 1-1.5 1.5H5.25a1.5 1.5 0 0 1-1.5-1.5V8.25a1.5 1.5 0 0 1 1.5-1.5h5.25a.75.75 0 0 0 0-1.5H5.25Z" />
-                                </svg>
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"
-                                    class="size-7 cursor-pointer text-red-600 bg-slate-800" (click)="showModalDelete()">
-                                    <path fill-rule="evenodd"
-                                        d="M16.5 4.478v.227a48.816 48.816 0 0 1 3.878.512.75.75 0 1 1-.256 1.478l-.209-.035-1.005 13.07a3 3 0 0 1-2.991 2.77H8.084a3 3 0 0 1-2.991-2.77L4.087 6.66l-.209.035a.75.75 0 0 1-.256-1.478A48.567 48.567 0 0 1 7.5 4.705v-.227c0-1.564 1.213-2.9 2.816-2.951a52.662 52.662 0 0 1 3.369 0c1.603.051 2.815 1.387 2.815 2.951Zm-6.136-1.452a51.196 51.196 0 0 1 3.273 0C14.39 3.05 15 3.684 15 4.478v.113a49.488 49.488 0 0 0-6 0v-.113c0-.794.609-1.428 1.364-1.452Zm-.355 5.945a.75.75 0 1 0-1.5.058l.347 9a.75.75 0 1 0 1.499-.058l-.346-9Zm5.48.058a.75.75 0 1 0-1.498-.058l-.347 9a.75.75 0 0 0 1.5.058l.345-9Z"
-                                        clip-rule="evenodd" />
-                                </svg>
-                            </div>
-                        </div>
+            <nz-card *ngFor="let category of pagedCategories" class="category-card">
+                <div class="flex justify-between w-full">
+                    <!-- Name category - icon -->
+                    <div class="items-center flex">
+                        <ng-container *ngIf="category.isActive; else falseIcon">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6 mr-2 text-green-500">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M15.182 15.182a4.5 4.5 0 0 1-6.364 0M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0ZM9.75 9.75c0 .414-.168.75-.375.75S9 10.164 9 9.75 9.168 9 9.375 9s.375.336.375.75Zm-.375 0h.008v.015h-.008V9.75Zm5.625 0c0 .414-.168.75-.375.75s-.375-.336-.375-.75.168-.75.375-.75.375.336.375.75Zm-.375 0h.008v.015h-.008V9.75Z" />
+                            </svg>
+                        </ng-container>
+                        <ng-template #falseIcon>
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6 mr-2 text-red-500">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M15.182 16.318A4.486 4.486 0 0 0 12.016 15a4.486 4.486 0 0 0-3.198 1.318M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0ZM9.75 9.75c0 .414-.168.75-.375.75S9 10.164 9 9.75 9.168 9 9.375 9s.375.336.375.75Zm-.375 0h.008v.015h-.008V9.75Zm5.625 0c0 .414-.168.75-.375.75s-.375-.336-.375-.75.168-.75.375-.75.375.336.375.75Zm-.375 0h.008v.015h-.008V9.75Z" />
+                            </svg>
+                        </ng-template>
+                        <span class="text-2xl font-semibold mr-2 text-blue-700">{{ category.categoryName }}</span>
                     </div>
-                    <img [src]="category.image" alt="{{ category.name }}" class="category-image">
+
+                    <div class="mr-2 text-white items-center flex"><strong>Status:</strong>
+                        <nz-switch nzSize="small" class="ml-2 bg-red" [(ngModel)]="category.isActive"
+                            [ngModelOptions]="{ standalone: true }"></nz-switch>
+                    </div>
                 </div>
+
+                <div class="mt-3">
+                    <div class="flex-1 flex-col mr-4">
+                        <span class="text-white text-base">Album</span>
+                        <ul
+                            class="text-white w-fit ml-2 mt-2  border-solid border-slate-600 border p-3 rounded-xl ring-offset ring-0">
+                            <li *ngFor="let albumName of category.albums">{{ albumName }}</li>
+                        </ul>
+                    </div>
+                    <div class="flex-1 flex-col mr-4">
+                        <span class="text-white text-base">Banner</span>
+                        <div *ngFor="let banner of category.banners"
+                            class="text-white w-fit ml-2 mt-2  border-solid border-slate-600 border p-3 rounded-xl ring-offset ring-0">
+                            <img [src]="banner.imageUrl" alt="{{ banner.filmName }}" />
+                            <h4 class="text-white">{{ banner.filmName }}</h4>
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- Active edit - delete -->
+                <div
+                    class="flex mt-14 gap-4 border-solid border-slate-600 border p-3 rounded-xl ring-offset ring-0 w-24">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"
+                        class="size-7 bg-slate-800 text-green-600 cursor-pointer" (click)="showModalUpdate()">
+                        <path
+                            d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-8.4 8.4a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32l8.4-8.4Z" />
+                        <path
+                            d="M5.25 5.25a3 3 0 0 0-3 3v10.5a3 3 0 0 0 3 3h10.5a3 3 0 0 0 3-3V13.5a.75.75 0 0 0-1.5 0v5.25a1.5 1.5 0 0 1-1.5 1.5H5.25a1.5 1.5 0 0 1-1.5-1.5V8.25a1.5 1.5 0 0 1 1.5-1.5h5.25a.75.75 0 0 0 0-1.5H5.25Z" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"
+                        class="size-7 cursor-pointer text-red-600 bg-slate-800" (click)="showModalDelete()">
+                        <path fill-rule="evenodd"
+                            d="M16.5 4.478v.227a48.816 48.816 0 0 1 3.878.512.75.75 0 1 1-.256 1.478l-.209-.035-1.005 13.07a3 3 0 0 1-2.991 2.77H8.084a3 3 0 0 1-2.991-2.77L4.087 6.66l-.209.035a.75.75 0 0 1-.256-1.478A48.567 48.567 0 0 1 7.5 4.705v-.227c0-1.564 1.213-2.9 2.816-2.951a52.662 52.662 0 0 1 3.369 0c1.603.051 2.815 1.387 2.815 2.951Zm-6.136-1.452a51.196 51.196 0 0 1 3.273 0C14.39 3.05 15 3.684 15 4.478v.113a49.488 49.488 0 0 0-6 0v-.113c0-.794.609-1.428 1.364-1.452Zm-.355 5.945a.75.75 0 1 0-1.5.058l.347 9a.75.75 0 1 0 1.499-.058l-.346-9Zm5.48.058a.75.75 0 1 0-1.498-.058l-.347 9a.75.75 0 0 0 1.5.058l.345-9Z"
+                            clip-rule="evenodd" />
+                    </svg>
+                </div>
+                <!-- <img [src]="category.image" alt="{{ category.categoryName}}" class="category-image"> -->
             </nz-card>
+            <div class="flex justify-center">
+                <nz-pagination [nzPageSize]="pageSize" [nzTotal]="filteredCategories.length" [(nzPageIndex)]="pageIndex"
+                    (nzPageIndexChange)="onPageChange($event)">
+                </nz-pagination>
+            </div>
         </div>
     </div>
-
-
 </div>
 
 
+<!--  Modal add  -->
 <nz-modal [nzMaskClosable]="false" [nzKeyboard]="true" [(nzVisible)]="isVisibleAdd" nzWidth="1000px"
     [nzTitle]="modalTitleAdd" (nzOnCancel)="handleAddCancel()" (nzOnOk)="handleAddOk()">
     <ng-template #modalTitleAdd>
