update: loading when login

--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -378,3 +378,9 @@ footer a {
     width: 100%;
     background-color: white;
 }
+
+.spin-container {
+    position: absolute;
+    top: 0;
+    background-color: rgba(240, 232, 232, 0.5);
+}
