fix: header can not display when route to video

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 @if (loading) {
-    <div class="flex justify-center items-center h-full w-full z-10 bg-white">
+    <div class="absolute top-0 flex justify-center items-center h-full w-full z-10 bg-white">
         <nz-spin nzSimple [nzSize]="'large'"></nz-spin>
     </div>
     
