--- a/src/app/management/pages/genre-movie/genre-movie.component.html
+++ b/src/app/management/pages/genre-movie/genre-movie.component.html
@@ -38,7 +38,7 @@
                 <div class="card-content">
                     <div class="card-info">
                         <div class="flex">
-                            <span class="text-2xl font-semibold mr-2 text-blue-700">{{ genre.name }}</span>
+                            <span class="text-2xl font-semibold mr-2 text-blue-700">{{ genre.genreName }}</span>
                             <div class="flex items-center">
                                 <ng-container *ngIf="genre.isActive; else falseIcon">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -57,8 +57,6 @@
                             </div>
                         </div>
                         <div class="additional-info">
-                            <p><strong>Description:</strong> {{ genre.description }}</p>
-                            <p><strong>Category Name:</strong> {{ genre.categoryname }}</p>
                             <p class="mr-2"><strong>Status:</strong>
                                 <nz-switch nzSize="small" class="ml-2 bg-red" [(ngModel)]="genre.isActive"
                                     [ngModelOptions]="{ standalone: true }"></nz-switch>
@@ -74,7 +72,7 @@
                                         d="M5.25 5.25a3 3 0 0 0-3 3v10.5a3 3 0 0 0 3 3h10.5a3 3 0 0 0 3-3V13.5a.75.75 0 0 0-1.5 0v5.25a1.5 1.5 0 0 1-1.5 1.5H5.25a1.5 1.5 0 0 1-1.5-1.5V8.25a1.5 1.5 0 0 1 1.5-1.5h5.25a.75.75 0 0 0 0-1.5H5.25Z" />
                                 </svg>
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"
-                                    class="size-7 cursor-pointer text-red-600 bg-slate-800" (click)="showModalDelete()">
+                                    class="size-7 cursor-pointer text-red-600 bg-slate-800" (click)="showModalDelete(genre.id)">
                                     <path fill-rule="evenodd"
                                         d="M16.5 4.478v.227a48.816 48.816 0 0 1 3.878.512.75.75 0 1 1-.256 1.478l-.209-.035-1.005 13.07a3 3 0 0 1-2.991 2.77H8.084a3 3 0 0 1-2.991-2.77L4.087 6.66l-.209.035a.75.75 0 0 1-.256-1.478A48.567 48.567 0 0 1 7.5 4.705v-.227c0-1.564 1.213-2.9 2.816-2.951a52.662 52.662 0 0 1 3.369 0c1.603.051 2.815 1.387 2.815 2.951Zm-6.136-1.452a51.196 51.196 0 0 1 3.273 0C14.39 3.05 15 3.684 15 4.478v.113a49.488 49.488 0 0 0-6 0v-.113c0-.794.609-1.428 1.364-1.452Zm-.355 5.945a.75.75 0 1 0-1.5.058l.347 9a.75.75 0 1 0 1.499-.058l-.346-9Zm5.48.058a.75.75 0 1 0-1.498-.058l-.347 9a.75.75 0 0 0 1.5.058l.345-9Z"
                                         clip-rule="evenodd" />
@@ -82,7 +80,6 @@
                             </div>
                         </div>
                     </div>
-                    <img [src]="genre.image" alt="{{ genre.name }}" class="category-image">
                 </div>
             </nz-card>
         </div>
@@ -113,34 +110,11 @@
                 <nz-form-item>
                     <nz-form-label nzRequired>Genre Name</nz-form-label>
                     <nz-form-control [nzErrorTip]="'Please enter genre name!'">
-                        <input nz-input placeholder="Please enter genre name" formControlName="name" />
+                        <input nz-input placeholder="Please enter genre name" formControlName="genreName" />
                     </nz-form-control>
                 </nz-form-item>
-
                 <nz-form-item>
-                    <nz-form-label nzRequired>Description</nz-form-label>
-                    <nz-form-control [nzErrorTip]="'Please enter description!'">
-                        <textarea nz-input placeholder="Enter description" [nzAutosize]="{ minRows: 2, maxRows: 7 }"
-                            formControlName="description"></textarea>
-                    </nz-form-control>
-                </nz-form-item>
-
-                <nz-form-item>
-                    <nz-form-label>Category Name</nz-form-label>
-                    <nz-form-control>
-                        <input nz-input placeholder="Enter category name" formControlName="categoryname" />
-                    </nz-form-control>
-                </nz-form-item>
-
-                <nz-form-item>
-                    <nz-form-label>Image URL</nz-form-label>
-                    <nz-form-control>
-                        <input nz-input placeholder="Enter image URL" formControlName="image" />
-                    </nz-form-control>
-                </nz-form-item>
-
-                <nz-form-item>
-                    <nz-form-label>Active</nz-form-label>
+                    <nz-form-label nzFor="isActive">Active</nz-form-label>
                     <nz-form-control>
                         <nz-switch formControlName="isActive"></nz-switch>
                     </nz-form-control>
@@ -170,34 +144,11 @@
                 <nz-form-item>
                     <nz-form-label nzRequired>Genre Name</nz-form-label>
                     <nz-form-control [nzErrorTip]="'Please enter genre name!'">
-                        <input nz-input placeholder="Please enter genre name" formControlName="name" />
+                        <input nz-input placeholder="Please enter genre name" formControlName="genreName" />
                     </nz-form-control>
                 </nz-form-item>
-
                 <nz-form-item>
-                    <nz-form-label nzRequired>Description</nz-form-label>
-                    <nz-form-control [nzErrorTip]="'Please enter description!'">
-                        <textarea nz-input placeholder="Enter description" [nzAutosize]="{ minRows: 2, maxRows: 7 }"
-                            formControlName="description"></textarea>
-                    </nz-form-control>
-                </nz-form-item>
-
-                <nz-form-item>
-                    <nz-form-label>Category Name</nz-form-label>
-                    <nz-form-control>
-                        <input nz-input placeholder="Enter category name" formControlName="categoryname" />
-                    </nz-form-control>
-                </nz-form-item>
-
-                <nz-form-item>
-                    <nz-form-label>Image URL</nz-form-label>
-                    <nz-form-control>
-                        <input nz-input placeholder="Enter image URL" formControlName="image" />
-                    </nz-form-control>
-                </nz-form-item>
-
-                <nz-form-item>
-                    <nz-form-label>Active</nz-form-label>
+                    <nz-form-label nzFor="isActive">Active</nz-form-label>
                     <nz-form-control>
                         <nz-switch formControlName="isActive"></nz-switch>
                     </nz-form-control>
