--- a/src/app/management/pages/genre-movie/genre-movie.component.css
+++ b/src/app/management/pages/genre-movie/genre-movie.component.css
@@ -90,6 +90,38 @@
     color: #ccc;
 }
 
+/* select */
+ ::ng-deep .ant-select:not(.ant-select-customize-input) .ant-select-selector {
+     background-color: #000000;
+     color: aliceblue;
+     height: 35px;
+
+ }
+
+ ::ng-deep .ant-select-dropdown {
+     background-color: #000000;
+     color: aliceblue;
+ }
+
+ ::ng-deep .ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
+     color: aliceblue;
+     font-weight: 600;
+     background-color: #1905ff;
+ }
+
+ ::ng-deep .ant-select-item-option:hover {
+     background-color: #1905ff;
+     color: white;
+ }
+
+ ::ng-deep .ant-select-item-option-active:not(.ant-select-item-option-disabled) {
+     background-color: #5a4df1;
+     color: white;
+ }
+ ::ng-deep .ant-select-item-option,
+  ::ng-deep .ant-select-arrow .anticon {
+     color: aliceblue;
+ }
 /* --------------------- */
 
 fieldset {
